fix(Copyable) wrap better

--- a/_sass/_details.scss
+++ b/_sass/_details.scss
@@ -46,6 +46,7 @@
 
 .copyable {
   display: flex;
+  flex-wrap: wrap;
   width: 100%;
   background-color: $gray-lighter;
   padding: 1em;
